# Stocker

./: .gitignore  .python-version  README.md  Stocker.py  main.py  pyproject.toml
Src/Backend/: BackTrade.py  Stock.py  StockInfo.py  backtrade_core.py  stock_calculate.py  stock_data.py
Src/Frontend/: Main.qml  SideBar.qml  StockPage.qml  TitleBar.qml
Src/Frontend/StockPage/: StockForecastPage.qml  StockInfoPage.qml  StockPlotPage.qml  StockPredicationPage.qml
Src/Frontend/StockPage/StockPlotPageComponent/: DateScale.qml  KDJChart.qml  KLineChart.qml  MACDChart.qml  PriceScale.qml  RSIChart.qml  ScaleControls.qml  StockChart.qml  StockHeader.qml  StockInfoPanel.qml
