[project]
name = "stocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "cupy-cuda12x>=13.5.1",
    "lightgbm>=4.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.32.2",
    "pyside6>=6.9.1",
    "scikit-learn>=1.7.1",
    "ta-lib>=0.6.5",
    "xgboost>=3.0.4",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
