[project]
name = "stocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "numpy>=2.3.2",
    "polars>=1.32.2",
    "pyside6>=6.9.1",
    "ta-lib>=0.6.5",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
